<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_vcuadrado"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bry.lista.VCuadrado">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/cuadrado"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:textSize="30sp"
            android:textAlignment="center" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05">

            <TextView
                android:text="@string/valor_del_lado"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/textView2"
                android:layout_weight="2.61"
                android:textSize="20sp"
                android:textAlignment="center" />

            <EditText
                android:layout_width="131dp"
                android:layout_height="match_parent"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/txtLadoCuadrado"
                android:layout_weight="0.82" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="79dp">

            <Button
                android:text="@string/calcular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnCalcular"
                android:layout_weight="1"
                android:onClick="Cuadrado" />

            <Button
                android:text="@string/borrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnBorrar"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
